--- a/index.html
+++ b/index.html
@@ -1,95 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
-
-    <link rel="icon" href="devchallenges.png" />
-
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-
-    <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Creative Team</title>
   </head>
-  <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
 
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+  <body>
+    <!--Header-->
+    <header id="header">
+      <h1>The creative crew</h1>
+
+      <div id="sub-header">
+        <h3>Who we are</h3>
+        <p>We are team of creatively diverse.  driven.  innovative individuals working in various locations from the world.</p>
+      </div>
+    </header>
+
+    <!--People-->
+    
+    <section id="people">
+
+
+      <div class="pic-card" id="c-1">
+        <img src="/photo1.png" alt="Bill Mahoney" class="photos">
+        <p class="name" >Bill Mahoney</p>
+        <div class="role">
+          <p>Product owner</p>
+        </div>
+     </div>
+
+      <div class="pic-card" id="c-2">
+        <img src="/photo2.png" alt="Saba Cabrera" class="photos">
+        <p class="name" >Saba Cabrera</p>
+        <div class="role">
+          <p>art director</p>
+        </div>
+     </div>
+
+      <div class="pic-card" id="c-3">
+        <img src="/photo3.png" alt="Shae Le" class="photos">
+        <p class="name" >Shae Le</p>
+        <div class="role">
+          <p>tech lead</p>
+        </div>
+    </div>
+
+      <div class="pic-card" id="c-4">
+        <img src="/photo4.png" alt="Skylah Lu" class="photos">
+        <p class="name" >Skylah Lu</p>
+        <div class="role">
+          <p>ux designer</p>
+        </div>
+    </div>
+
+      <div class="pic-card" id="c-5">
+        <img src="/photo5.png" alt="Griff Richards" class="photos">
+        <p class="name" >Griff Richards</p>
+        <div class="role">
+          <p>developer</p>
+        </div>  
       </div>
 
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
+      <div class="pic-card" id="c-6">  
+        <img src="/photo6.png" alt="Stan John" class="photos">
+        <p class="name" >Stan John</p>
+        <div class="role">
+          <p>developer</p>
+        </div>
     </div>
+
+    </section>
+
+    <!--FOOTER-->
+    <footer>created by U.S.Khokhar - devChallenges.io</footer>
+
   </body>
 </html>
